RESOLVED FIXED165133
intersection-observer-entry-interface.html test fails on the bots
https://bugs.webkit.org/show_bug.cgi?id=165133
Summary intersection-observer-entry-interface.html test fails on the bots
Simon Fraser (smfr)
Reported 2016-11-28 22:46:55 PST
intersection-observer-entry-interface.html is failing on the bots, but does not when the test is run locally on its own.
Attachments
Patch (4.78 KB, patch)
2016-11-28 23:10 PST, Simon Fraser (smfr)
no flags
Simon Fraser (smfr)
Comment 1 2016-11-28 22:48:47 PST
The bug is that TestController::ensureViewSupportsOptionsForTest() early returns if it thinks the current view supports the new test options. However, the code fails to check for a difference in the enableIntersectionObserver option. In general, this code is confused about options that must be set before view creation, and those that can be set as normal preferences.
Simon Fraser (smfr)
Comment 2 2016-11-28 23:10:56 PST
WebKit Commit Bot
Comment 3 2016-11-29 09:16:27 PST
Comment on attachment 295585 [details] Patch Clearing flags on attachment: 295585 Committed r209073: <http://trac.webkit.org/changeset/209073>
WebKit Commit Bot
Comment 4 2016-11-29 09:16:31 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.