Tools/WebKitTestRunner/ios/PlatformWebViewIOS.mm
@@ -278,7 +278,10 @@ WKRetainPtr<WKImageRef> PlatformWebView::windowSnapshotImage()
 
 bool PlatformWebView::viewSupportsOptions(const TestOptions& options) const
 {
-    if (m_options.overrideLanguages != options.overrideLanguages || m_options.needsSiteSpecificQuirks != options.needsSiteSpecificQuirks || m_options.useCharacterSelectionGranularity != options.useCharacterSelectionGranularity)
+    if (m_options.overrideLanguages != options.overrideLanguages
+        || m_options.needsSiteSpecificQuirks != options.needsSiteSpecificQuirks
+        || m_options.useCharacterSelectionGranularity != options.useCharacterSelectionGranularity
+        || m_options.enableIntersectionObserver != options.enableIntersectionObserver)
         return false;
 
     return true;
