Tools/WebKitTestRunner/mac/PlatformWebViewMac.mm
@@ -273,7 +273,11 @@ WKRetainPtr<WKImageRef> PlatformWebView::windowSnapshotImage()
 
 bool PlatformWebView::viewSupportsOptions(const TestOptions& options) const
 {
-    if (m_options.useThreadedScrolling != options.useThreadedScrolling || m_options.overrideLanguages != options.overrideLanguages || m_options.useMockScrollbars != options.useMockScrollbars || m_options.needsSiteSpecificQuirks != options.needsSiteSpecificQuirks)
+    if (m_options.useThreadedScrolling != options.useThreadedScrolling
+        || m_options.overrideLanguages != options.overrideLanguages
+        || m_options.useMockScrollbars != options.useMockScrollbars
+        || m_options.needsSiteSpecificQuirks != options.needsSiteSpecificQuirks
+        || m_options.enableIntersectionObserver != options.enableIntersectionObserver)
         return false;
 
     return true;
